Retrieve food functionality